# MCPServerDemo

./: .gitignore  Dataprovider.py  DataprovidersMCPServer.py  Peterlynch.py  README.md  Streamable.py  StreamableClient.py  TestMPCserver.py  main.py  mcpclient.py  pyproject.toml  serversendevent.py
