[project]
name = "mcpserverdemo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.0",
    "fastmcp>=3.0.2",
    "jsonrpcserver>=5.0.9",
    "langchain>=1.2.10",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.10",
    "logging>=0.4.9.6",
    "mcp[cli]>=1.26.0",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.1",
    "streamlit>=1.19.0",
    "uvicorn>=0.41.0",
]
